2003-10-24  Carl Worth  <cworth@east.isi.edu>

	* src/cairo_ft_font.c (_init_cairo_ft_lib): Fix missing void from
	function prototype.
	(_utf8_to_ucs4): Mark static.

	* src/cairo_xlib_surface.c: Remove unused function
	_cairo_xlib_surface_get_picture.

	* src/cairo_ft_font.c (_cairo_ft_font_copy)
	(_cairo_ft_font_glyph_extents, _cairo_ft_font_glyph_path):
	Internal functions can't receive a NULL font pointer.

	* src/cairo.c (cairo_text_extents, cairo_glyph_extents)
	(cairo_text_path, cairo_glyph_path): Comment-out functions without
	complete implementations to squelch compiler warnings.

	* configure.in: Bump version to 0.1.8 for font API changes.

	* src/cairo.c (cairo_current_font): Fix missing return value.

	* src/cairoint.h: No need for CAIRO_INT_STATUS_NULL_POINTER
	(CAIRO_FONT_BACKEND_DEFAULT): Move declaration of default font
	backend up into cairoint.h

	* src/cairo_gstate.c (_cairo_gstate_init): Create a default font,
	don't leave it NULL.
	(_cairo_gstate_current_font): gstate->font must never be NULL.
	(_cairo_gstate_current_font_extents): Can never be called with a
	NULL gstate.

	* src/cairo_font.c (_cairo_font_create): Rename
	_cairo_font_create_font and move to top of file.
	(_cairo_font_init, _cairo_font_scale, _cairo_font_transform)
	(_cairo_font_text_extents, _cairo_font_glyph_extents)
	(_cairo_font_show_text, _cairo_font_show_glyphs)
	(_cairo_font_text_path, _cairo_font_glyph_path)
	(_cairo_font_font_extents): These internal functions can never be
	called with a NULL font.

2003-10-23  Graydon Hoare <graydon@redhat.com>

	* src/cairo_ft_font.c: New file.
	* src/Makefile.am: Add cairo_ft_font.c
	* src/cairo.c: 
	* src/cairo.h:
	* src/cairo_font.c:
	* src/cairo_gstate.c:
	* src/cairo_xlib_surface.c:
	* src/cairoint.h: Change to virtual font interface.

2003-10-23  Carl Worth  <cworth@isi.edu>

	* TODO: Added notes on some missing functions. Update PostScript
	comparison with respect ot new arc functions.

2003-10-23  Carl Worth  <cworth@isi.edu>
